Fix button spacing issue on contact page when using a mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,6 +317,10 @@ nav li {
 .finish-content h2 {  
     font-size: medium;
 }
+
+.game-btn {
+    padding: 10px;
+}
   }
 
   @media (max-width: 999px) {
